# PulsarOfTheDay

./: .gitignore  README.jnyjny.md  README.md  pyproject.toml
example/: 2021-05-26.text  example.text
pulsaroftheday/: animate.py  main.py  message.py  plots.py
pulsaroftheday/catalog/: __init__.py  atnf_pulsar.py  atnf_pulsar_catalog.py  telescope.py
pulsaroftheday/catalog/data/: parameters.json  reference.json
pulsaroftheday/catalogs/: __init__.py
pulsaroftheday/catalogs/atnf/: __init__.py  animate.py  plots.py  pulsar_catalog.py
